--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
+
 {
+  "config": {
+    "rollup": {
+      "disableNative": true
+    }
+  },
+
   "name": "cachi-health-platform",
   "private": true,
   "version": "0.0.0",
@@ -12,6 +19,8 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "react": "^19.1.1",
+    "react-icons": "^5.0.1",
+    "react-markdown": "^9.0.1",
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
